feat: main and lobby